
- Added the ability to configure emails to be sent when a User Input step updates the entry and remains in progress and when the step is completed.